<resources>
    <string name="app_name">StoryApp</string>
    <string name="silahkan_login">Login</string>
    <string name="login">login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_empty">Password Salah</string>
    <string name="errorValid">Valid</string>
    <string name="password">Password</string>
    <string name="title_login">Welcome!</string>
    <string name="message_login_page">Message</string>
    <string name="email">Email</string>
    <string name="email_validation">Email Validation</string>
    <string name="password_length">Password Length</string>
    <string name="tittle">Story App</string>
    <string name="list_story">List Story</string>
    <string name="fab_add_story">Add Story</string>
    <string name="tittle_item">Tittle Story</string>
    <string name="image_item">Image</string>
    <string name="name_item">Nama</string>
    <string name="botton_logout">Logout</string>
    <string name="app_icon">Icon</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="login_botton">Login</string>
    <string name="message_login">Sign in to continue</string>
    <string name="title_regis">Hi! Create a new account</string>
    <string name="nama_regis">Nama</string>
    <string name="regis">Sign Up</string>
    <string name="welcome_title">Hello!</string>
    <string name="desc_welcome">Best Place to write life stories and share your journey experiences</string>
    <string name="title_add_story">Add Story</string>
    <string name="decs_image">Description</string>
    <string name="gallery_button">Galery</string>
    <string name="camera_botton">Camera</string>
    <string name="hint_description">silahkan tulis!</string>
    <string name="button_add">Add</string>
    <string name="description_story_add">Description</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="name_story">Story</string>
    <string name="username">Nama</string>
    <string name="item_image">Story Image</string>
    <string name="description_detail_story">Description</string>
    <string name="description_story">Description</string>
    <string name="title_item">Title Story</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_type">Maps</string>
    <string name="password_length_error">Password must be at least 8 characters long</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="welcome_message">Welcome to %1$s. Please log in to continue.</string>
    <string name="sign_up_failed">Sign Up Failed!</string>
    <string name="try_again_message">Something went wrong. Please try again.</string>
    <string name="access_location_denied">Akses lokasi ditolak</string>
    <string name="Location_not_found">Lokasi tidak ditemukan</string>
    <string name="my_location">lokasi saya</string>
    <string name="show_location">Show location</string>
    <string name="accept_location">Yeah</string>
    <string name="logut">Logout</string>
</resources>